boards: arm: sam4l_wm400_cape: Add board init
Add board.c file to init sam4l_wm400_cape module.

Signed-off-by: Gerson Fernando Budke <nandojve@gmail.com>

--- a/boards/arm/sam4l_wm400_cape/sam4l_wm400_cape_defconfig
+++ b/boards/arm/sam4l_wm400_cape/sam4l_wm400_cape_defconfig
@@ -11,3 +11,6 @@ CONFIG_SOC_ATMEL_SAM4L_EXT_MAINCK=y
 CONFIG_WATCHDOG=n
 CONFIG_SPI=y
 CONFIG_GPIO=y
+CONFIG_LED=y
+CONFIG_SHELL=y
+CONFIG_DEVICE_SHELL=y
