soc: arm: atmel: sam4l: Add DT clocks
Add device tree entries and implement SoC clocks based on device tree
values. This enable clocks on sam4l_wm400_cape board as example.

Signed-off-by: Gerson Fernando Budke <nandojve@gmail.com>

--- a/boards/arm/sam4l_wm400_cape/sam4l_wm400_cape.dts
+++ b/boards/arm/sam4l_wm400_cape/sam4l_wm400_cape.dts
@@ -63,6 +63,18 @@
 	clock-frequency = <48000000>;
 };
 
+&refclk {
+	status = "okay";
+};
+
+&pllclk {
+	status = "okay";
+};
+
+&rc1m {
+	status = "okay";
+};
+
 &usart0 {
 	current-speed = <115200>;
 	pinctrl-0 = <&pb14a_usart0_rxd0 &pb15a_usart0_txd0>;
