--- a/boards/arm/sam4l_wm400_cape/sam4l_wm400_cape.dts
+++ b/boards/arm/sam4l_wm400_cape/sam4l_wm400_cape.dts
@@ -24,6 +24,7 @@
 		zephyr,shell-uart = &usart0;
 		zephyr,sram = &sram0;
 		zephyr,flash = &flash0;
+		zephyr,code-partition= &code_partition;
 	};
 
 	leds {
@@ -92,5 +93,22 @@
 		reset-gpios = <&gpioa 10 GPIO_ACTIVE_LOW>;
 		slptr-gpios = <&gpioa 9 GPIO_ACTIVE_HIGH>;
 		status = "okay";
+	};
+};
+
+&flash0 {
+	partitions {
+		compatible = "fixed-partitions";
+		#address-cells = <1>;
+		#size-cells = <1>;
+
+		boot_partition: partition@0 {
+			label = "sam-ba";
+			reg = <0x000000000 0x00004000>;
+		};
+		code_partition: partition@4000 {
+			label = "image";
+			reg = <0x00004000 0x0003c000>;
+		};
 	};
 };
