--- a/boards/arm/sam4l_wm400_cape/sam4l_wm400_cape_defconfig
+++ b/boards/arm/sam4l_wm400_cape/sam4l_wm400_cape_defconfig
@@ -7,6 +7,7 @@ CONFIG_CONSOLE=y
 CONFIG_UART_CONSOLE=y
 CONFIG_SERIAL=y
 CONFIG_BOARD_SAM4L_WM400_CAPE=y
+CONFIG_USE_DT_CODE_PARTITION=y
 CONFIG_SOC_ATMEL_SAM4L_EXT_MAINCK=y
 CONFIG_WATCHDOG=n
 CONFIG_SPI=y
