--- a/boards/arm/sam4l_wm400_cape/sam4l_wm400_cape.dts
+++ b/boards/arm/sam4l_wm400_cape/sam4l_wm400_cape.dts
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019 Gerson Fernando Budke
+ * Copyright (c) 2020 Gerson Fernando Budke <nandojve@gmail.com>
  * SPDX-License-Identifier: Apache-2.0
  */
 
@@ -24,7 +24,7 @@
 		zephyr,shell-uart = &usart0;
 		zephyr,sram = &sram0;
 		zephyr,flash = &flash0;
-		zephyr,code-partition= &code_partition;
+		zephyr,code-partition= &slot0_partition;
 	};
 
 	leds {
@@ -106,9 +106,13 @@
 			label = "sam-ba";
 			reg = <0x000000000 0x00004000>;
 		};
-		code_partition: partition@4000 {
-			label = "image";
-			reg = <0x00004000 0x0003c000>;
+		slot0_partition: partition@4000 {
+			label = "image-0";
+			reg = <0x00004000 0x0001e000>;
+		};
+		slot1_partition: partition@22000 {
+			label = "image-1";
+			reg = <0x00022000 0x0001e000>;
 		};
 	};
 };
