--- a/boards/arm/sam4l_wm400_cape/sam4l_wm400_cape_defconfig
+++ b/boards/arm/sam4l_wm400_cape/sam4l_wm400_cape_defconfig
@@ -13,6 +13,8 @@ CONFIG_BOARD_SAM4L_WM400_CAPE=y
 CONFIG_USE_DT_CODE_PARTITION=y
 CONFIG_SOC_ATMEL_SAM4L_EXT_MAINCK=y
 CONFIG_WATCHDOG=n
+CONFIG_SOC_FLASH_SAM_FLASHCALW=y
+CONFIG_FLASH_SHELL=y
 
 CONFIG_GPIO=y
 CONFIG_GPIO_SAM4L=y
@@ -27,3 +29,6 @@ CONFIG_SPI_SAM_PORT_0_PIN_SCK_PA23=y
 
 CONFIG_SHELL=y
 CONFIG_DEVICE_SHELL=y
+
+CONFIG_LOG=y
+CONFIG_FLASH_LOG_LEVEL_DBG=y
