--- a/dts/arm/atmel/sam4l.dtsi
+++ b/dts/arm/atmel/sam4l.dtsi
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019 Gerson Fernando Budke
+ * Copyright (c) 2020 Gerson Fernando Budke <nandojve@gmail.com>
  *
  * SPDX-License-Identifier: Apache-2.0
  */
@@ -22,6 +22,14 @@
 			compatible = "arm,cortex-m4";
 			clocks = <&pllclk>;
 			reg = <0>;
+			#address-cells = <1>;
+			#size-cells = <1>;
+
+			mpu: mpu@e000ed90 {
+				compatible = "arm,armv7m-mpu";
+				reg = <0xe000ed90 0x40>;
+				arm,num-mpu-regions = <8>;
+			};
 		};
 	};
 
@@ -29,12 +37,27 @@
 		compatible = "mmio-sram";
 	};
 
-	flash0: flash@0 {
-		compatible = "soc-nv-flash";
-		label = "FLASH_0";
-	};
-
 	soc {
+		flash-controller@400a0000 {
+			compatible = "atmel,sam-flashcalw-controller";
+			label = "FLASH_CTRL";
+			reg = <0x400a0000 0x400>;
+			interrupts = <0 0>;
+			peripheral-id = <40>;
+
+			#address-cells = <1>;
+			#size-cells = <1>;
+
+			flash0: flash@0 {
+				compatible = "soc-nv-flash";
+				label = "FLASH_0";
+
+				write-block-size = <512>;
+				erase-block-size = <512>;
+			};
+
+		};
+
 		wdog: watchdog@400f0c00 {
 			compatible = "atmel,sam-tw-watchdog";
 			reg = <0x400f0c00 0x400>;
