--- a/dts/arm/atmel/sam4lc4b.dtsi
+++ b/dts/arm/atmel/sam4lc4b.dtsi
@@ -1,18 +1,7 @@
 /*
- * Copyright (c) 2019 Gerson Fernando Budke
+ * Copyright (c) 2020 Gerson Fernando Budke <nandojve@gmail.com>
  *
  * SPDX-License-Identifier: Apache-2.0
  */
 
-#include <mem.h>
-#include <atmel/sam4l.dtsi>
-
-/ {
-	flash0: flash@0 {
-		reg = <0x0 DT_SIZE_K(256)>;
-	};
-
-	sram0: memory@20000000 {
-		reg = <0x20000000 DT_SIZE_K(32)>;
-	};
-};
+#include <atmel/sam4lx4.dtsi>
