--- a/dts/arm/atmel/sam4lx4.dtsi
+++ b/dts/arm/atmel/sam4lx4.dtsi
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019 Gerson Fernando Budke
+ * Copyright (c) 2020 Gerson Fernando Budke <nandojve@gmail.com>
  *
  * SPDX-License-Identifier: Apache-2.0
  */
@@ -8,8 +8,12 @@
 #include <atmel/sam4l.dtsi>
 
 / {
-	flash0: flash@0 {
-		reg = <0x0 DT_SIZE_K(256)>;
+	soc {
+		flash-controller@400a0000 {
+			flash0: flash@0 {
+				reg = <0 DT_SIZE_K(256)>;
+			};
+		};
 	};
 
 	sram0: memory@20000000 {
