drivers: Introduce sigfox API
Add initial version.

Signed-off-by: Gerson Fernando Budke <nandojve@gmail.com>

--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -11,6 +11,8 @@ source "drivers/ieee802154/Kconfig"
 
 source "drivers/lora/Kconfig"
 
+source "drivers/sigfox/Kconfig"
+
 source "drivers/console/Kconfig"
 
 source "drivers/debug/Kconfig"
