drivers: sigfox: Add st s2-lp sigfox driver
Add initial version.

Signed-off-by: Gerson Fernando Budke <nandojve@gmail.com>

--- a/drivers/sigfox/CMakeLists.txt
+++ b/drivers/sigfox/CMakeLists.txt
@@ -1,1 +1,5 @@
 # SPDX-License-Identifier: Apache-2.0
+
+zephyr_sources_ifdef(CONFIG_SIGFOX_S2LP st_s2lp.c)
+zephyr_sources_ifdef(CONFIG_SIGFOX_S2LP st_s2lp_rf.c)
+zephyr_sources_ifdef(CONFIG_SIGFOX_S2LP st_s2lp_iface.c)
