boards: arm: Introduce HT-Micron iMCP ht32sx SIP
Add HT-Micron iMCP ht32sx SIP initial version. This also add htm as
vendor prefix to be available for compatibles.

Signed-off-by: Gerson Fernando Budke <nandojve@gmail.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -102,6 +102,7 @@
 /boards/arm/sam4s_xplained/               @fallrisk
 /boards/arm/sam_e70_xplained/             @nandojve
 /boards/arm/sam_v71_xult/                 @nandojve
+/boards/arm/sip_ht32sx/                   @nandojve
 /boards/arm/v2m_beetle/                   @fvincenzo
 /boards/arm/olimexino_stm32/              @ydamigos
 /boards/arm/sensortile_box/               @avisconti
